# ai-agent-skills

./: .gitignore  README.md  skills-lock.json
docs/: 20260219-datasheet-intelligence-intro.md  20260312-librarian-tool-intro.md  20260312-meta-docs-intro.md
skills/datasheet-intelligence/: SKILL.md  pyproject.toml
skills/datasheet-intelligence/references/: execution-options.md  installation.md  output-contract.md  usage.md
skills/datasheet-intelligence/scripts/: check_deps.py  ingest_docs.py  read.py  read_docs.py  search.py  search_docs.py  toc.py
skills/datasheet-preprocess/: SKILL.md
skills/datasheet-preprocess/references/: output-contract.md
skills/datasheet-preprocess/scripts/: ingest_tech_docs.py  read_spec.py  search_docs.py
skills/librarian-tool/: SKILL.md  doc_manager.py  pyproject.toml
skills/meta-docs/: SKILL.md  doc_manager.py
skills/naver-land-scouter/: SKILL.md  pyproject.toml
skills/naver-land-scouter/references/: api_endpoints.md  ops_policies.md  param_dictionary.md  workflows.md
skills/naver-land-scouter/scripts/: area_range.py  cli.py  constants.py  location_utils.py  naver_land_client.py  naver_land_repository.py  normalization.py  param_builder.py  report_formatter.py  schemas.py  session_bootstrap.py
skills/naver-land-scouter/tests/: test_article_payload.py  test_bootstrap.py  test_cli.py  test_discovery.py  test_history_service.py  test_listing_service.py  test_location_service.py  test_normalization.py  test_scan_service.py  test_workflow_service.py
tools/: export_skills.py  validate_skills.py
(+13 files in other folders)
