[project]
name = "datasheet-intelligence"
version = "0.3.0"
description = "Extract hardware facts from datasheets (PDF, DOCX, XLSX)"
requires-python = ">=3.10"
dependencies = [
    "pypdfium2>=4.30.0",
    "python-docx>=1.0.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
structured = ["docling"]
